added SEO to additional pages

--- a/_posts/2016-07-06-Sci-Fi-Concept-Illustration.html
+++ b/_posts/2016-07-06-Sci-Fi-Concept-Illustration.html
@@ -27,6 +27,24 @@ preview: card-starling.jpg
   <p>Origonal story and characters by Ursula Wood</p>
 </div>
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "CreativeWork",
+  "name": "Sci-Fi Concept Illustration",
+  "author": {
+    "@type": "Person",
+    "name": "Cecilia Bleszynski"
+  },
+  "image": "http://cylka.ca/images/illustration/Elliott.jpg",
+  "url": "http://cylka.ca/illustration/2016/07/06/digital-painting-and-illustration/",
+  "dateCreated": "2016-07-06",
+  "description": "A conceptual study of a scene from an online short story",
+  "keywords": "concept, art, science, fiction, alien, monster, color, stills, frame"
+}
+</script>
+
+
 <!---
 <iframe style="border: 1px solid #777;" src="https://indd.adobe.com/embed/dd04056a-aba1-444c-8a6e-c53dddbb95b4?startpage=1&allowFullscreen=true" width="100%" height="460px" frameborder="0" allowfullscreen=""></iframe>
 
