--- a/_posts/2017-03-10-Love-Buds.html
+++ b/_posts/2017-03-10-Love-Buds.html
@@ -109,3 +109,20 @@ function showSlides(n) {
   slideTimer = setTimeout(showSlides, 3000); // Change image every 2 seconds
 }
 </script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "CreativeWork",
+  "name": "Love Buds Application",
+  "author": {
+    "@type": "Person",
+    "name": "Cecilia Bleszynski"
+  },
+  "image": "http://cylka.ca/images/screens/Lovebuds3.png",
+  "url": "http://cylka.ca/illustration/design/motion/2017/03/10/Love-Buds/",
+  "dateCreated": "2017-03-10",
+  "description": "Love Buds is a couples application I designed to help bring long distance relationships closer. It allows couples to maintain healthy sex lives through a customizable and trackable smart toys.",
+  "keywords": "smart, phone, application, UI, UX, design, couples, toy, long, distance, relationship, cute, approachable, fun, motion"
+}
+</script>
