--- a/_posts/2017-04-20-twitch-channel-visuals.html
+++ b/_posts/2017-04-20-twitch-channel-visuals.html
@@ -40,3 +40,19 @@ preview: card-beautifulmachine.jpg
 <img class="pad-t img-flex" src="{{site.baseurl}}/images/beautiful_machine/sample1.png" alt="Sample icon and font combinations for client">
 
 <img class="pad-t img-flex" src="{{site.baseurl}}/images/beautiful_machine/sample2.png" alt="Sample icon and font combinations for client">
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "CreativeWork",
+  "name": "Beautiful Machine Twitch Channel Visuals",
+  "author": {
+    "@type": "Person",
+    "name": "Cecilia Bleszynski"
+  },
+  "image": "http://cylka.ca/images/beautiful_machine/banner.png",
+  "url": "http://cylka.ca/illustration/design/motion/2017/04/20/twitch-channel-visuals/",
+  "dateCreated": "2017-04-20",
+  "description": "A cyberpunk themed banner and buttons for a twitch homepage featuring robots and neon colours.",
+  "keywords": "twitch, banner, illustration, cyber-punk, mech, icons"
+}
+</script>
