--- a/_posts/2017-06-10-portrait.html
+++ b/_posts/2017-06-10-portrait.html
@@ -24,3 +24,20 @@ preview: card-portrait.jpg
   <p>I would love to be able to give some sort of an in-depth analysis of this piece, but like with many self portraits this really is just an exploration of my physical appearance and has no deep conceptual motive behind it. I chose dramatic lighting and an expression that would accentuate certain creases in my face. I guess I could argue that I simply aimed to capture my average looking face with its flaws. I didn’t aim to make a pretty portrait, so I left my mild acne in and made no attempt to make my nose look appealingly smaller. I am satisfied with it, knowing that I am showing an honest portrayal of myself. The addition of pine branches along the bottom is a nod to my roots in rural Canada.</p>
   <p>Overall, this was a fun exploration and helped me home my digital painting skills in Photoshop.</p>
 </div>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "CreativeWork",
+  "name": "Self Portrait",
+  "author": {
+    "@type": "Person",
+    "name": "Cecilia Bleszynski"
+  },
+  "image": "http://cylka.ca/images/illustration/illustration-portrait.jpg",
+  "url": "http://cylka.ca/illustration/2017/06/10/portrait/",
+  "dateCreated": "2017-06-10",
+  "description": "A portrait aimed to capture intense lighting and natural flaws in my appearance to achieve realism.",
+  "keywords": "self, portrait, art, concept, personal, realism, digital, painting"
+}
+</script>
