--- a/_posts/2017-06-24-Ottawa-International-Animation-Festival-2017.html
+++ b/_posts/2017-06-24-Ottawa-International-Animation-Festival-2017.html
@@ -123,3 +123,20 @@ function showSlides(n) {
   slideTimer = setTimeout(showSlides, 3000); // Change image every 2 seconds
 }
 </script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "CreativeWork",
+  "name": "Ottawa International Animation Festival",
+  "author": {
+    "@type": "Person",
+    "name": "Cecilia Bleszynski"
+  },
+  "image": "http://cylka.ca/images/OIAF/welcome.png",
+  "url": "http://cylka.ca/illustration/design/2017/06/24/Ottawa-International-Animation-Festival-2017/",
+  "dateCreated": "2017-06-10",
+  "description": "Festival design of program guides, as well as building online advertisements, posters, festival passes, and visuals for the schedule application.",
+  "keywords": "OIAF, Ottawa, animation, festival, design, posters,"
+}
+</script>
