added updated copy

--- a/_posts/2018-03-19-motion_reel.html
+++ b/_posts/2018-03-19-motion_reel.html
@@ -12,14 +12,16 @@ preview: card-reel.png
 
 {% include nav.html %}
 
-  <iframe src="https://player.vimeo.com/video/258210633?color=ff0179" width="100%" height="500px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  <div class="video-container">
+    <iframe src="https://player.vimeo.com/video/396610634?color=4dffee" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+  </div>
 
   <div class="text-center pad-b">
 
     <div class="text-center zindex-1 w-1 pad-b">
-      <h2 class="">2018 Motion Reel</h2>
+      <h2 class="">2020 Motion Reel</h2>
     </div>
-      <p class="gutter-1-2">Over the past 2 years I've learned a lot about after effects animation and made this video to sumerise my journey so far. <br>Audio is courtesy of Mint Royal: Singing in the Rain</p>
+      <p class="gutter-1-2">A collection or some of my most recent motion work as well as a couple of my favourites. I’ve included samples of promotional pieces I’ve worked on as well as application animation work for the Weather Channel and LocalNow.</p>
   </div>
 
   <script type="application/ld+json">
