--- a/_posts/2018-06-15-LocalNow-Player-Motion-Design.html
+++ b/_posts/2018-06-15-LocalNow-Player-Motion-Design.html
@@ -5,6 +5,7 @@ meta: Working with the clients established brand and graphics to create micro an
 source: https://ceciliableszynski.myportfolio.com/
 categories:
 - design
+- motion
 
 preview: card-localnow.jpg
 ---
