--- a/_posts/2019-07-26-DTV-STB.html
+++ b/_posts/2019-07-26-DTV-STB.html
@@ -5,33 +5,37 @@ meta: A preview to explore a custom application design on limited hardware(Set T
 source: https://ceciliableszynski.myportfolio.com/
 categories:
 - design
+- motion
 
 preview: card-DTV.jpg
 ---
 
 {% include nav.html %}
 
-  <div class="img-fade">
-    <img class="w-1 relative" src="{{site.baseurl}}/images/DTV/DTV-High-Preview-1.gif" alt="DTV Preview">
+  <div class="video-container">
+    <iframe src="https://player.vimeo.com/video/39629090?color=4dffee" width="100%" height="700" frameborder="0" allow="autoplay; fullscreen" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
   </div>
 
   <div class="max-length text-center w-1">
-  <h2>DirectTV Set Top Box Preview Video</h2>
+    <h2>DirectTV Set Top Box Preview Video</h2>
   </div>
-<div class="gutter pad-t">
-  <p>This is a preview designed to showcase the potential of DirectTV on Set Top Box (Cable Box) platforms in Latin America. While Set Top Boxes lack the processing power of other TV streaming hardware such as Amazon Fire and Apple TV- our team of designers and developers were able to assess the limitations and delivered an appealing and intuitive design. My role was to create a preview video exploring the application features. This meant communicating with the Visual Designer and developers assessing the Set Top Box platform to ensure my application animations were true to the limitations. Certain animations could not be used on the platform such as opacity, rotation, and a frame rate of less than 15 per second. This created an interesting challenge, and resulted in clever uses of single frame transitions and eased motion to maintain polished interactions.
-  </p>
-  <p>Application developed by You.I TV</p>
-  <p>UX/UI designer: Darcy Aubin</p>
-</div>
+
+  <div class="gutter pad-t">
+    <p>This is a preview designed to showcase the potential of DirectTV on Set Top Box (Cable Box) platforms in Latin America. While Set Top Boxes lack the processing power of other TV streaming hardware such as Amazon Fire and Apple TV- our team of designers and developers were able to assess the limitations and delivered an appealing and intuitive design. My role was to create a preview video exploring the application features. This meant communicating with the Visual Designer and developers assessing the Set Top Box platform to ensure my application animations were true to the limitations. Certain animations could not be used on the platform such as opacity, rotation, and a frame rate of less than 15 per second. This created an interesting challenge, and resulted in clever uses of single frame transitions and eased motion to maintain polished interactions.
+    </p>
+    <p>Application developed by You.I TV</p>
+    <p>UX/UI designer: Darcy Aubin</p>
+  </div>
 
 <ul class="grid list-group--inline">
-  <li class="island-1-2 unit [ xs-1 s-1 m-1- l-1-2 ]">
-  <img class="img-flex" src="{{site.baseurl}}/images/DTV/DTV-High-Preview-2.gif" alt="DTV Preview">
+  <img class="w-1 relative" src="{{site.baseurl}}/images/DTV/DTV-High-Preview-4.gif" alt="DTV Preview">
+
+  <li class="unit [ xs-1 s-1 m-1- l-1 ]">
+  <img class="margin-top-right img-flex" src="{{site.baseurl}}/images/DTV/DTV-High-Preview-2.gif" alt="DTV Preview">
   </li>
 
-  <li class="island-1-2 unit [ xs-1 s-1 m-1- l-1-2 ]">
-    <img class="img-flex" src="{{site.baseurl}}/images/DTV/DTV-High-Preview-3.gif" alt="DTV Preview">
+  <li class="unit [ xs-1 s-1 m-1- l-1 ]">
+    <img class="margin-top-right img-flex" src="{{site.baseurl}}/images/DTV/DTV-High-Preview-3.gif" alt="DTV Preview">
   </li>
 </ul>
 
