--- a/_posts/2018-07-11-Interactive-Ad-Design.html
+++ b/_posts/2018-07-11-Interactive-Ad-Design.html
@@ -5,6 +5,7 @@ meta: A collection of interactive ads for streaming players
 source: https://ceciliableszynski.myportfolio.com/
 categories:
 - design
+- motion
 
 preview: card-interactive.jpg
 ---
@@ -12,7 +13,7 @@ preview: card-interactive.jpg
 {% include nav.html %}
 
 <div class="video-container">
-  <iframe src="https://player.vimeo.com/video/394919618" width="100%" height="700" frameborder="0" allow="autoplay; fullscreen" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
+  <iframe src="https://player.vimeo.com/video/394919618?color=4dffee" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" api="1&background=1&autoplay=1&loop=1" mozallowfullscreen webkitallowfullscreen allowfullscreen></iframe>
 </div>
 
   <div class="max-length text-center w-1">
@@ -39,7 +40,6 @@ preview: card-interactive.jpg
   "keywords": "application, UI, UX, advertisment, interactive, design, color, stills, frame"
 }
 </script>
-
 
 <!---
 <iframe style="border: 1px solid #777;" src="https://indd.adobe.com/embed/dd04056a-aba1-444c-8a6e-c53dddbb95b4?startpage=1&allowFullscreen=true" width="100%" height="460px" frameborder="0" allowfullscreen=""></iframe>
