Fixed Spelling Issues

--- a/_posts/2017-03-10-Love-Buds.html
+++ b/_posts/2017-03-10-Love-Buds.html
@@ -16,14 +16,12 @@ preview: card-lovebuds.jpg
     <iframe class="" src="https://player.vimeo.com/video/247162948" width="100%" height="700px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div>
 
-<div class="pad-b">
-  <p>Love Buds is a couples application I designed to help bring long distance relationships closer. It allows couples to maintain healthy sex lives through a customizable and trackable smart toys. This application is designed to allow couples to sync with each others smart adult toys across long distances. With additional chat, video options, and an evocative remote control interface; couples have a platform to stay in touch, more than ever before.
-  <h5>Problems and  Solutions</h5>
-  <p>Issues I encountered was making the application approachable, as well as establishing a system that would make users feel safe and secure when using it with their partner. Security in social applications is an ever present issue, especially with the intimacy of this application.
-  To make the application approachable, I used round shapes and silly imagery to make the application fun and inviting. Despite the applications function- the interface was designed with brought colours and an abstract interface, giving users the ability to control the device discreetly.</p>
-  <p>After user testing, changes were made to the account creation to process to ensure security. In having a users account directly attached to a set of paired physical devices, the danger of potentially connecting with a stranger was eliminated.
-  This application was very fun to design! The subject matter was one that I was initially intimidated to work with, but by stepping out of my comfort zone I had the opportunity to develope a unique mobile experience.</p>
-</div>
+  <div class="pad-b">
+    <p>Love Buds is a couples application I designed to help bring long distance relationships closer. It allows couples to maintain healthy sex lives through a customizable and trackable smart toys. This application is designed to allow couples to sync with each others smart adult toys across long distances. With additional chat, video options, and an evocative remote control interface; couples have a platform to stay in touch, more than ever before.
+    <h5>Problems and  Solutions</h5>
+    <p>Issues I encountered was making the application approachable, as well as establishing a system that would make users feel safe and secure when using it with their partner. Security in social applications is an ever present issue, especially with the intimacy of this application. To make the application approachable, I used round shapes and silly imagery to make the application fun and inviting. Despite the applications function- the interface was designed with bright colours and an abstract interface, giving users the ability to control the device discreetly.</p>
+    <p>After user testing, changes were made to the account creation process to ensure security. In having a users account directly attached to a set of paired physical devices, the danger of potentially connecting with a stranger was eliminated. This application was very fun to design! The subject matter was one that I was initially intimidated to work with, but by stepping out of my comfort zone I had the opportunity to develop a unique mobile experience.</p>
+  </div>
 
 <div class="pad-b">
   <div class="slideshow-container">
