--- a/_posts/2017-06-10-portrait.html
+++ b/_posts/2017-06-10-portrait.html
@@ -21,8 +21,8 @@ preview: card-portrait.jpg
 
 
 <div class="gutter">
-  <p>I would love to be able to give some sort of an in-depth analysis of this piece, but like with many self portraits this really is just an exploration of my physical appearance and has no deep conceptual motive behind it. I chose dramatic lighting and an expression that would accentuate certain creases in my face. I guess I could argue that I simply aimed to capture my average looking face with its flaws. I didn’t aim to make a pretty portrait, so I left my mild acne in and made no attempt to make my nose look appealingly smaller. I am satisfied with it, knowing that I am showing an honest portrayal of myself. The addition of pine branches along the bottom is a nod to my roots in rural Canada.</p>
-  <p>Overall, this was a fun exploration and helped me home my digital painting skills in Photoshop.</p>
+  <p>IThis is a self portrait of myself I made in 2017. I chose dramatic lighting and an expression that would accentuate certain creases in my face. My aim at the time was to capture my average looking face with its flaws. I left my mild acne in and made no attempt to make my nose look appealingly smaller. I was  satisfied with it in the end, knowing that it was an honest portrayal of myself at the time. The addition of pine branches along the bottom is a nod to my roots in rural Canada.</p>
+  <p>Overall, this was a fun exploration and helped me hone my digital painting skills in Photoshop.</p>
 </div>
 
 <script type="application/ld+json">
