--- a/_posts/2018-01-10-daily_dino_news.html
+++ b/_posts/2018-01-10-daily_dino_news.html
@@ -23,12 +23,12 @@ preview: card-DDN.jpg
   <div class="pad-t-2 gutter">
     <p>This was a group client project aimed to create a pitch video for the children's TV show concept: Daily Dino News.
     Daily Dino News (DDN) is a children’s news program featuring the latest and greatest in Dinosaur facts.
-    Me and 4 of my classmates were tasked with creating a conceptual identity for the show, and a promotional video to convey its potential in order to be pitched to networks.<br>
+    Me and 4 of my classmates were tasked with creating a conceptual identity for the show, and a promotional video to convey its potential in order to be pitched to networks.
     As project lead I was responsible for overseeing software and deliverables.</p>
 
     <h5>The Brand</h5>
-    <p class="pad-b">Our group came together with 50 conceptual sketches initially, and narrowed them down. In order to clean up the concepts for the clent, we exchanged concepts with each other to refine and came up with 4 concepts and brands to share with the client. After sharing with the client a final design was chosen and pulled forward.
-    The logo speaks true to the shows subject and contains imagery that the show’s target audience of 6-11 will instantly resonate with. What cam with it was a brand identity, themed around the colours and textures themed around the jurassic landscape</p>
+    <p class="pad-b">Our group came together with 50 conceptual sketches initially, and narrowed them down. In order to clean up the concepts for the client, we exchanged concepts and reviewed our initial sketches. We then came up with 4 concepts and brands to share with the client. After sharing with the client a final design was chosen and pulled forward.
+    The logo speaks true to the show's subject and contains imagery that the target audience of 6-11 will instantly resonate with. What came with it was a brand identity, themed around the colours and textures of the jurassic landscape</p>
     <h5>The Motion</h5>
 
     <div class="video-container">
@@ -58,8 +58,8 @@ preview: card-DDN.jpg
       </li>
     </ul>
 
-    <p class="pad-t">DDN’s pitch video was designed to illustrate the pitc and showcase it’s potencial.
-    With the demographic in mind, we decided on the theme of paper cut-outs for our video. Using finger-puppet style animation and colourful shapes created a fun and informative video that speaks to children the show is targeted too.
+    <p class="pad-t">DDN’s pitch video was designed to illustrate the pitch and showcase it’s potential.
+    With the demographic in mind, we decided on the theme of paper cut-outs for our video. Using finger-puppet style animation and colourful shapes created a fun and informative video that speaks to children.
     </p>
 
     <ul class="grid list-group-inline text-center">
@@ -100,13 +100,13 @@ preview: card-DDN.jpg
   </div>
 
   <h3 class="text-center">Credit to our fantastic project team</h3>
-  <ul class="list-group">
+  <ul class="list-groups">
     <li>Lauren Berg</li>
     <li>Katrin Emery</li>
     <li>MJ Holland</li>
     <li>Kait Moore</li>
     <h4 class="pad-t-2"> Origonal Concept</h4>
-    <li>Gerald Tripp</l1>
+    <li>Gerald Tripp</li>
   </ul>
 
   <script type="application/ld+json">
