--- a/_posts/2016-12-19-personal-motion.html
+++ b/_posts/2016-12-19-personal-motion.html
@@ -19,11 +19,8 @@ preview: card-cylka.jpg
     <div class="text-center zindex-1 w-1 pad-b">
     <h2>Neon Motion Brand</h2>
   </div>
-
-  <p class="gutter-1-2">This animation was built to embody one of the many inspirations I had when designing my logo.</p>
-  <p class="gutter-1-2">One of my  most prominent inspirations was the tubular, stroke-like nature of neon signs. I wanted my logo to be light and fun to reflect the style and nature my designs often take.
-    Neon lights can stand for different things depending on location and shape. Here in the west, neon signs shine bright and proud throughout the night. But in the city of Warsaw Poland, Neon signs were encouraged by communist rulers in the 1940’s  and after politically reforming, the people grew to see the signs as relics for a painful age: Where politicians tried to cover up the struggles of the people with bright street signs. It was this dynamic, and the beauty of many of these signs still around today, that made me enamoured in their aesthetic. Regardless of the images shown, both here and in Warsaw people used neon lights as a way to communicate in the dark in a variety of styles.  I want to be the able to light up the ideas of others and make it so they can be heard and understood.</p>
-</div>
+    <p class="gutter-1-2">An exploratory logo animation inspired by neon lights. Neon signs are a frequent inspiration for me and I wanted to try and incorporate motion into the concept.</p>
+  </div>
 
 <script type="application/ld+json">
 {
