--- a/_posts/2017-06-24-Ottawa-International-Animation-Festival-2017.html
+++ b/_posts/2017-06-24-Ottawa-International-Animation-Festival-2017.html
@@ -20,27 +20,10 @@ preview: card-OIAF.jpg
 
 <div class="pad-b">
 <p>I had the lovely opportunity to work with the Ottawa International Animation Festival(OIAF) for their 2017 production. During my contract I was responsible for designing and formatting the program guides, as well as building online advertisements, posters, festival passes, and visuals for the schedule application.
-<br>The visual theme of festival was a bit tricky this year- in that the curated festival poster for 2017 didn’t contain a lot of isolatable visuals to tie in with the rest of the festivals visuals. As a result I used a lot of texture to establish consistent themes across the various mediums.
-<br>For areas where we lacked visual content, such as the festival program page (usually containing a campaign image that was missing this year) - I supplied an illustration featuring visuals from the festivals poster combined with imagery of characters from select feature screenings.
-<br>This gave the festival guide a fitting visual introduction to the content of the event.</p>
+<br>The visual theme of the festival was a bit tricky- in that the curated festival poster for 2017 didn’t contain a lot of isolatable visuals to tie in with the rest of the festivals visuals. As a result I used a lot of texture to establish consistent themes across the various mediums.
+<br>For areas where we lacked visual content, such as the festival program page (usually containing a campaign image that was missing this year) - I supplied an illustration featuring visuals from the festivals curated poster combined with characters from this years feature films. This gave the festival guide a fitting visual introduction to the festival.</p>
 <p>I worked with SHAW and the OIAF to create an identity for the Ingenius youth program hosted at the NAC.
 <br>The logo was designed to evoke the educational nature of the event, by having the logo contain the image of a brain. Drawn in a manner similar to that of a childlike illustration, the smiling face and nods to cartoon animation gave the logo a fun and approachable feel without sacrificing legibility.</p>
-<div class="pad-b">
-  <img class="img-flex w-1" src="{{site.baseurl}}/images/OIAF/poster.jpg" alt="sample poster image">
-</div>
-<h4 class="pad-t-2">Directional Signage - Print</h4>
-<p>I created a variety of signage templates to aid festival goers in navigating various festival venues. I incorporated the theme of limbs to create a literal hand point theme to all the signs.
-<div>
-  <img class="img-flex w-1" src="{{site.baseurl}}/images/OIAF/no_entrance.png" alt="sample directional sign">
-</div>
-<h4 class="pad-t-2 pad-b-1-4">Problems and Solutions</h4>
-<h5>Problem</h5>
-<p>The festival needed a fresh campaign for their posters and promotional materials for 2017. Previous campaigns were built on fun and playful Illustrated posters- but didn’t reflect the festival itself very strongly and potentially alienated locals. The festival needed a way to showcase individual screenings to a wider audience of people- while still identifying as part of the greater festival.</p>
-<h5>Solution</h5>
-<p>Rather than designing a separate campaign for the festival, I created a poster frame that could showcase the festivals featured screenings while establishing it as part of the festival. This design made it so the general public were more directly informed of local screenings, rather than having to recognised a general campaign and looking up the screenings online. Thus opening up the festival up to a wider audience of casual attendees.
-Overall I am happy to have been able to work with a festival I loved and worked with a wide variety of print and digital pieces.</p>
-</p>
-</div>
 
 <h5 class="pad-t text-center">Festival Guide Highlight Pages</h5>
 
@@ -87,6 +70,23 @@ Overall I am happy to have been able to work with a festival I loved and worked 
     <span class="dot" onclick="currentSlide(4)"></span>
     <span class="dot" onclick="currentSlide(5)"></span>
   </div>
+</div>
+
+<h4 class="pad-t-2">Directional Signage - Print</h4>
+<p>I created a variety of signage templates to aid festival goers in navigating various festival venues. I incorporated the theme of limbs to create a literal hand point theme to all the signs.
+<div>
+  <img class="img-flex w-1" src="{{site.baseurl}}/images/OIAF/no_entrance.png" alt="sample directional sign">
+</div>
+<h4 class="pad-t-2 pad-b-1-4">Problems and Solutions</h4>
+<h5>Problem</h5>
+<p>The festival needed a fresh campaign for their posters and promotional materials for 2017. Previous campaigns were built on fun and playful Illustrated posters- but didn’t reflect the festival itself very strongly and potentially alienated locals. The festival needed a way to showcase individual screenings to a wider audience- while still identifying as part of the greater festival.</p>
+<h5>Solution</h5>
+<p>Rather than designing a separate campaign for the festival, I created a poster frame that could showcase the festivals featured screenings while establishing it as part of the festival. This design made it so the general public were more directly informed of local screenings, rather than having to recognise a general campaign and looking up the screenings online. Thus opening up the festival up to a wider audience of casual attendees.
+Overall I am happy to have been able to work with one of my favourite festivals, and glad to have created a wide variety of print and digital pieces.</p>
+</div>
+
+<div class="pad-b">
+  <img class="img-flex w-1" src="{{site.baseurl}}/images/OIAF/poster.jpg" alt="sample poster image">
 </div>
 
 <script>
