--- a/_posts/2017-06-10-portrait.html
+++ b/_posts/2017-06-10-portrait.html
@@ -21,7 +21,7 @@ preview: card-portrait.jpg
 
 
 <div class="gutter">
-  <p>IThis is a self portrait of myself I made in 2017. I chose dramatic lighting and an expression that would accentuate certain creases in my face. My aim at the time was to capture my average looking face with its flaws. I left my mild acne in and made no attempt to make my nose look appealingly smaller. I was  satisfied with it in the end, knowing that it was an honest portrayal of myself at the time. The addition of pine branches along the bottom is a nod to my roots in rural Canada.</p>
+  <p>This is a self portrait of myself I made in 2017. I chose dramatic lighting and an expression that would accentuate certain creases in my face. My aim at the time was to capture my average looking face with its flaws. I left my mild acne in and made no attempt to make my nose look appealingly smaller. I was  satisfied with it in the end, knowing that it was an honest portrayal of myself at the time. The addition of pine branches along the bottom is a nod to my roots in rural Canada.</p>
   <p>Overall, this was a fun exploration and helped me hone my digital painting skills in Photoshop.</p>
 </div>
 
