--- a/about.html
+++ b/about.html
@@ -3,13 +3,15 @@ layout: default
 ---
 
 {% include nav.html %}
-<h1 class="decalTXT"> HEllO!</h1>
-<div class="float">
-<div class="img-fade relative">
-  <img class="w-1 relative" src="{{site.baseurl}}/images/PortraitBW_2_Cont.png" alt="portrait">
-</div>
+<div class="pad-t-2">
+  <h1 class="decalTXT">HEllO!</h1>
+  <div class="float">
+    <div class="img-fade relative">
+      <img class="w-1 relative" src="{{site.baseurl}}/images/PortraitBW_2_Cont.png" alt="portrait">
+    </div>
 
-  <div class="gutter">
-  {% include bio.html url="/about/" title="about" %}
+      <div class="gutter">
+      {% include bio.html url="/about/" title="about" %}
+      </div>
   </div>
 </div>
