--- a/_posts/2016-12-19-personal-motion.html
+++ b/_posts/2016-12-19-personal-motion.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 2017 Motion Branding Piece - Neon Light Animation
+title: Neon Light Animation
 meta: A personal exploration of my 2016 brand identity using different animation techniques. Neon lights, Fluid Motion, and spark textures, Ottawa Ontario.
 description: A personal exploration of my 2016 brand identity using different animation techniques. Neon lights, Fluid Motion, and spark textures, Ottawa Ontario.
 source: https://bles0009.myportfolio.com/
