--- a/_posts/2017-04-20-twitch-channel-visuals.html
+++ b/_posts/2017-04-20-twitch-channel-visuals.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Twitch Banner and Visuals
+title: Twitch Channel Branding
 meta: Twitch Channel Illustration and visuals for banner and cards
 source: https://bles0009.myportfolio.com/
 categories:
