--- a/_posts/2017-06-10-portrait.html
+++ b/_posts/2017-06-10-portrait.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Cecilia Bleszynski Portrait
+title: Self Portrait
 meta: Digital portrait I painted over the summer of 2017 in Ottawa Ontario.
 description: A portrait aimed to capture intense lighting and natural flaws in my appearance to achieve realism.
 source: https://bles0009.myportfolio.com/
