--- a/_posts/2017-06-24-Ottawa-International-Animation-Festival-2017.html
+++ b/_posts/2017-06-24-Ottawa-International-Animation-Festival-2017.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 2015 Motion Branding Piece
+title: Ottawa International Animation Festival
 meta: A personal exploration of my 2016 brand identity using different animation techniques
 source: https://bles0009.myportfolio.com/
 categories:
