--- a/_posts/2018-06-15-LocalNow-Player-Motion-Design.html
+++ b/_posts/2018-06-15-LocalNow-Player-Motion-Design.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Player interaction and transition animation for the LocalNow app
+title: LocalNow Micro Animations
 meta: Working with the clients established brand and graphics to create micro animations for their streaming application. Primarily the player buttons and page transitions
 source: https://ceciliableszynski.myportfolio.com/
 categories:
