--- a/_posts/2018-07-11-Interactive-Ad-Design.html
+++ b/_posts/2018-07-11-Interactive-Ad-Design.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Various interactive ad concepts for cross platform applications
+title: Interactive Player Ads
 meta: A collection of interactive ads for streaming players
 source: https://ceciliableszynski.myportfolio.com/
 categories:
