--- a/_posts/2019-07-26-DTV-STB.html
+++ b/_posts/2019-07-26-DTV-STB.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Video preview to demonstrate app features, performance, and interaction on limited Set-Top-Box platforms
+title: DirectTV Set-Top Box
 meta: A preview to explore a custom application design on limited hardware(Set Top Boxes/Cable Boxes) for streaming
 source: https://ceciliableszynski.myportfolio.com/
 categories:
